# mypkg

./: LICENSE  README.md  package.xml  setup.py
.github/workflows/: test.yml
launch/: mic_to_piano.launch.py  talk_listen.launch.py
launch/install/: local_setup.sh  setup.bash  setup.sh
launch/log/: latest_build
mypkg/: draw_piano.py  freaqency.py  listener.py  mic_freq_pub.py  piano.py  talker.py  tuner_node.py
test/: test.bash
test/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
test/log/: latest_build
